--- a/index.scss
+++ b/index.scss
@@ -25,7 +25,7 @@ body {
 
 .homepage {
   background-color: white;
-  .info {
+  .page-title {
     margin: 40px auto;
     text-align: center;
     .avatar {
@@ -357,7 +357,7 @@ body {
 @media only screen and (max-width: 800px){
   .homepage {
     padding: 40px 16px;
-    .info {
+    .page-title {
       .avatar {
         height: 40px;
         width: 288px;
@@ -531,7 +531,3 @@ body {
     }
   }
 }
-
-
-
-
