--- a/index.scss
+++ b/index.scss
@@ -129,6 +129,10 @@ body {
         background: #111923 url("images/project11.png") center center/contain;
         box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
       }
+      &-project-k {
+        background: #0e2857 url("images/project12.png") center center/contain;
+        box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
+      }
     }
     @keyframes my-move
     {
