--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
   display: inline-block;
   position: fixed;
   right: 20px;
-  bottom: 40px;
+  bottom: 60px;
   background: #000 url("images/up.png") no-repeat center center/60%;
   width: 60px;
   height: 60px;
@@ -194,6 +194,11 @@ body {
         font-weight: bold; }
       .homepage .about-me .cell a:hover {
         color: #4a4a4a; }
+  .homepage .message-content .sign {
+    font-size: large;
+    color: #4a4a4a;
+    margin-top: 64px;
+    font-weight: bold; }
 
 .template {
   background: #fff;
@@ -292,9 +297,29 @@ body {
         font-size: small;
         text-align: center; }
     .homepage .head {
-      text-align: center; }
+      margin-top: 0;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      display: -webkit-flex;
+      display: flex;
+      height: 48px;
+      background: white;
+      z-index: 1000;
+      box-shadow: rgba(11, 24, 35, 0.05) 0 0 20px; }
       .homepage .head .link {
-        margin: 0 20px; }
+        -webkit-flex: 1;
+        flex: 1;
+        text-align: center;
+        line-height: 48px; }
+        .homepage .head .link-selected {
+          background: #000;
+          color: white; }
+        .homepage .head .link-selected:after {
+          display: none; }
+    .homepage .head:before {
+      display: none; }
     .homepage .about-me .cell .info {
       display: inline-block;
       margin-top: 4px;
@@ -305,6 +330,8 @@ body {
         left: 50%; }
     .homepage .about-me .cell .name {
       width: 100%;
+      text-align: center; }
+    .homepage .message-content .sign {
       text-align: center; }
 
   .template {
