--- a/index.scss
+++ b/index.scss
@@ -14,7 +14,7 @@ body {
   display: inline-block;
   position: fixed;
   right: 20px;
-  bottom: 40px;
+  bottom: 60px;
   background: #000 url("images/up.png") no-repeat center center/60%;
   width: 60px;
   height: 60px;
@@ -271,6 +271,14 @@ body {
       }
     }
   }
+  .message-content {
+    .sign {
+      font-size: large;
+      color: $color-gray;
+      margin-top: 64px;
+      font-weight: bold;
+    }
+  }
 }
 
 .template {
@@ -394,10 +402,37 @@ body {
       }
     }
     .head {
-      text-align: center;
+      //text-align: center;
+      //.link {
+      //  margin: 0 20px;
+      //}
+      margin-top: 0;
+      position: fixed;
+      bottom:0;
+      left:0;
+      width: 100%;
+      display: -webkit-flex;
+      display: flex;
+      height: 48px;
+      background: white;
+      z-index: 1000;
+      box-shadow: rgba(11, 24, 35, 0.05) 0 0 20px;
       .link {
-        margin: 0 20px;
+        -webkit-flex: 1;
+        flex: 1;
+        text-align: center;
+        line-height: 48px;
+        &-selected {
+          background: #000;
+          color: white;
+        }
+        &-selected:after {
+          display: none;
+        }
       }
+    }
+    .head:before {
+      display: none;
     }
     .about-me {
       .cell {
@@ -415,6 +450,11 @@ body {
           width: 100%;
           text-align: center;
         }
+      }
+    }
+    .message-content {
+      .sign {
+        text-align: center;
       }
     }
   }
