--- a/index.scss
+++ b/index.scss
@@ -239,7 +239,6 @@ body {
         font-size: 18px;
         position: relative;
         color: #aaa;
-        font-weight: lighter;
         text-decoration: none;
         .code_image {
           visibility: hidden;
@@ -259,6 +258,7 @@ body {
         cursor: pointer;
       }
       .name {
+        margin-bottom: .5rem;
         width: 100%;
         display: inline-block;
         font-size: 14px;
@@ -282,7 +282,6 @@ body {
 
 .template {
   background: #fff;
-  font-weight:lighter;
   color: $color-gray;
   .title {
     font-size: 40px;
