--- a/gitalk.css
+++ b/gitalk.css
@@ -20,10 +20,11 @@
   box-sizing: border-box;
 }
 .gt-container a {
-  color: #00bb5b;
+  color: #222;
 }
 .gt-container a:hover {
-  color: #00fc7a;
+  font-weight: bolder;
+  color: #000;
   border-color: #00fc7a;
 }
 .gt-container a.is--active {
@@ -45,7 +46,7 @@
 .gt-container .gt-svg svg {
   width: 100%;
   height: 100%;
-  fill: #00bb5b;
+  fill: 555;
 }
 .gt-container .gt-ico {
   display: inline-block;
@@ -139,7 +140,7 @@
   white-space: nowrap;
   cursor: pointer;
   border: 1px solid #00bb5b;
-  border-radius: 5px;
+  border-radius: 40px;
   background-color: #00bb5b;
   color: #fff;
   outline: none;
@@ -337,9 +338,10 @@
 }
 .gt-container .gt-header-controls-tip {
   font-size: 0.875em;
-  color: #00bb5b;
+  color: #555;
   text-decoration: none;
   vertical-align: sub;
+  display: none;
 }
 @media (max-width: 479px) {
   .gt-container .gt-header-controls-tip {
@@ -408,7 +410,7 @@
   transition: all ease 0.25s;
 }
 .gt-container .gt-comment-content:hover {
-  box-shadow: 0 0.625em 3.75em 0 #f4f4f4;
+  box-shadow: 0 0.2em 1em 0 #dddddd;
 }
 @media (max-width: 479px) {
   .gt-container .gt-comment-content {
@@ -423,7 +425,7 @@
 }
 .gt-container .gt-comment-username {
   font-weight: 500;
-  color: #00bb5b;
+  color: #222;
   text-decoration: none;
 }
 .gt-container .gt-comment-username:hover {
@@ -431,11 +433,11 @@
 }
 .gt-container .gt-comment-text {
   margin-left: 0.5em;
-  color: #0d9650;
+  color: #bbb;
 }
 .gt-container .gt-comment-date {
   margin-left: 0.5em;
-  color: #0d9650;
+  color: #aaa;
 }
 .gt-container .gt-comment-like,
 .gt-container .gt-comment-edit,
@@ -461,7 +463,7 @@
   color: #333 !important;
 }
 .gt-container .gt-comment-admin .gt-comment-content {
-  background-color: #f6f9fe;
+  /*background-color: #f6f9fe;*/
 }
 @-moz-keyframes gt-kf-rotate {
   0% {
