--- a/index.scss
+++ b/index.scss
@@ -3,10 +3,15 @@ $color-bg: #fafafa;
 $color-gray: #4a4a4a;
 $color-gray-light: #9B9B9B;
 
+html {
+  font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans', 'Helvetica Neue',
+  Helvetica, Arial, 'Noto Sans CJK SC', 'Microsoft YaHei', 'Hiragino Sans GB',
+  'Heiti SC', 'WenQuanYi Micro Hei', sans-serif !important;
+}
+
 body {
   padding: 0;
   margin: 0;
-  font-family: Sans-serif  !important;
 }
 
 .to-top {
@@ -366,7 +371,7 @@ body {
 
 @media only screen and (max-width: 800px){
   .homepage {
-    background: #fbfbfb;
+    background: #fdfdfd;
     padding: 140px 16px 40px;
     .mobile-head {
       z-index: 100;
@@ -406,7 +411,7 @@ body {
       }
       .the-link {
         display: block;
-        font-size: small;
+        font-size: medium;
         text-align: center;
       }
     }
@@ -416,6 +421,7 @@ body {
       display: flex;
       margin-top: 32px;
       height: 48px;
+      padding-bottom: 8px;
       .link {
         font-size: medium;
         -webkit-flex: 1;
@@ -582,7 +588,6 @@ body {
     }
   }
 }
-
 
 
 
