--- a/index.css
+++ b/index.css
@@ -282,7 +282,7 @@ body {
       background: white;
       box-shadow: rgba(0, 0, 0, 0.1) 0 0 20px;
       left: 0;
-      top: 0; }
+      top: -1px; }
     .homepage .page-title {
       margin: 24px auto; }
       .homepage .page-title .avatar {
